<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Number Remedies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_fill_your_details">Please Fill Your Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="submit">Submit</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="remedies">Remedies</string>
    <string name="number_remedies">Number Remedies</string>
    <string name="lorem_ipsum">Numerology numbers have a very special meaning as they are represented by...</string>
    <string name="rudraksha">Rudraksha</string>
    <string name="general_remedies">General Remedies</string>
    <string name="chakra">Chakra</string>
    <string name="vedic_mantra">Vedic Mantra</string>
    <string name="lorem2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="read_more">Read More</string>
    <string name="number_remedies_2">Number\nRemedies</string>
    <string name="remedies_number_1">Remedies Number : 1</string>
    <string name="impact">Impact</string>
    <string name="body">Body</string>
    <string name="mind">Mind</string>
    <string name="soul">Soul</string>
    <string name="gemstone">Gemstone</string>
    <string name="crystal_bracelet">Crystal Bracelet</string>
    <string name="lorem_6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="for_quick_support_write_to_us_at">For quick support, write to us at</string>
    <string name="feedback">Feedback@hopeitz.com</string>
    <string name="lorem7">Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\nLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="mukhi_rudraksha">Mukhi Rudraksha</string>
    <string name="numerology_numbers_have_a_very_special_meaning_as_they_are_represented_by">Numerology numbers have a very special meaning as they are represented by...</string>
    <string name="root_chakra_muladhara">Root Chakra (Muladhara)</string>
    <string name="sacral_chakra_swadhisthana">Sacral Chakra (Swadhisthana)</string>
    <string name="solar_plexus_manipura">Solar Plexus (Manipura)</string>
    <string name="heart_chakra_anahata">Heart Chakra (Anahata)</string>
    <string name="throat_chakra_vishuddha">Throat Chakra (Vishuddha)</string>
    <string name="third_eye_ajna">Third Eye (Ajna)</string>
    <string name="crown_chakra_sahasrara">Crown Chakra (Sahasrara)</string>
    <string name="marriage_relationship">Marriage / Relationship</string>
    <string name="health">Health</string>
    <string name="delay_in_child">Delay In Child</string>
    <string name="delay_in_house_property">Delay in House / Property</string>
    <string name="finance_wealth">Finance / Wealth</string>
</resources>