<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".DetailsFragment">

    <!-- Please Fill Your Details -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/please_fill_your_details"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <!-- First Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFirstName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_margin="20dp"
        android:hint="@string/first_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastName"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputFirstName"
        android:layout_margin="20dp"
        android:hint="@string/last_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- DOB -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDOB"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLastName"
        android:layout_margin="20dp"
        android:hint="@string/dob">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- TODO: Add DatePicker -->

    <!-- Gender Selection -->
    <LinearLayout
        android:id="@+id/genderSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputDOB"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <!-- Male -->
        <LinearLayout
            android:id="@+id/maleLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_grey"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageViewMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_male_2" />

            <TextView
                android:id="@+id/maleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="#606060" />
        </LinearLayout>

        <!-- Female -->
        <LinearLayout
            android:id="@+id/femaleLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_grey"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageViewFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_female_2" />

            <TextView
                android:id="@+id/femaleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="#606060" />
        </LinearLayout>

        <!-- Others -->
        <LinearLayout
            android:id="@+id/otherLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_grey"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageViewOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_other_2" />

            <TextView
                android:id="@+id/otherTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="#606060" />
        </LinearLayout>
    </LinearLayout>


    <!-- Submit Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderSelectionLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:enabled="false"
        android:layout_margin="20dp"
        app:strokeColor="@color/black"
        style="@style/AppButton" />


</RelativeLayout>
